welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:2: error: value bs is not a member of object Math
	if (n>21){return 2*Math.bs(n)}else{return Math.bs(n)}
                                ^diff21:2: error: value bs is not a member of object Math
	if (n>21){return 2*Math.bs(n)}else{return Math.bs(n)}
                                                       ^